fixed the leave message system, fixed mobile spacing for navbar

--- a/styles/smallscreen.css
+++ b/styles/smallscreen.css
@@ -137,7 +137,7 @@ html,body{
     font-family: 'Jost', sans-serif;
     color: white;
     text-align: center;
-    font-size: 30px;
+    font-size: 25px;
     padding-top: 0;
     visibility: hidden;
     opacity: 0;
@@ -148,7 +148,7 @@ html,body{
     font-family: 'Jost', sans-serif;
     color: white;
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     opacity: 0;
     visibility: hidden;
     transition: all .3s ease-in-out;
