--- a/styles/widescreen.css
+++ b/styles/widescreen.css
@@ -207,6 +207,17 @@ html,body{
 
 }
 
+
+.hero_thankspage{
+    height: 100vh;
+    width: 100%;
+    text-align: left;
+    background-color: gray;
+    background: url('../images/isaiah_imgs/compressed/1.jpg') no-repeat center;
+    background-size: cover;
+
+}
+
 .hero_bg{
     z-index: 1;
     height: 100%;
@@ -248,6 +259,12 @@ html,body{
     font-size: 30px;
     display: block;
 
+}
+#hero_subtitle_thankspage{
+    font-family: 'Jost', sans-serif;
+    font-size: 30px;
+    display: block;
+    width: 50%;
 }
 
 #hero_button {
@@ -351,6 +368,8 @@ html,body{
     font-size: 16px;
     
 }
+
+
 
 
 /* instagram stuff */
